# alive2d

./: .gitignore  README.md  settings.gradle.kts
alive2d/: build.gradle.kts
alive2d/src/androidTest/java/com/arkueid/alive2d/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
alive2d/src/main/cpp/: CMakeLists.txt  JE.h  Live2D.cpp  Live2DModel.cpp  lappmodel.cpp  live2d.cpp
alive2d/src/main/cpp/Main/: CMakeLists.txt
alive2d/src/main/cpp/Main/src/: CMakeLists.txt  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  Log.cpp  MatrixManager.cpp  MatrixManager.hpp
alive2d/src/main/cpp/Main/src/fine-grained/: Model.cpp
alive2d/src/main/java/com/arkueid/alive2d/: LAppModel.java  Live2D.java  Live2DModel.java  MotionPriority.java  OnFinishMotionCallback.java  OnStartMotionCallback.java  Parameter.java  StandardParams.java
alive2d/src/test/java/com/arkueid/alive2d/: ExampleUnitTest.java  ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/arkueid/alive2d/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/arkueid/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_live2_d_scene.xml  activity_live2_dscene.xml  activity_main.xml  fragment_expression.xml  fragment_expression_list.xml  item_model.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
